--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,21 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.To_Do_LIST"
+        android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
+            android:name=".ToDoListActivity"
+            android:exported="false"
+            android:label="ToDoListActivity"
+            android:parentActivityName=".MainActivity"/>
+        <activity
+            android:name=".NewActivity"
+            android:exported="false"
+            android:label="NewActivity"
+            android:parentActivityName=".MainActivity" />
+        <activity
             android:name=".MainActivity"
-            android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.To_Do_LIST">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
