--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,18 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
+            android:name=".ViewLocationsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AddLocationActivity"
+            android:exported="false" />
+        <activity
             android:name=".ToDoListActivity"
             android:exported="false"
             android:label="ToDoListActivity"
-            android:parentActivityName=".MainActivity"/>
+            android:parentActivityName=".MainActivity" />
         <activity
-            android:name=".NewActivity"
+            android:name=".LocationsMenuActivity"
             android:exported="false"
             android:label="NewActivity"
             android:parentActivityName=".MainActivity" />
