--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         android:theme="@style/Theme.LunchTray"
         tools:targetApi="33">
         <activity
-            android:name=".MainActivity"
+            android:name=".Backend.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.LunchTray">
             <intent-filter>
